# parallax

./: .gitignore  .mise.toml  .pre-commit-config.yaml  PULL_REQUEST.md  noxfile.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  pre-commit.yml
docs/: CONTRIBUTING.md
docs/user_guide/: install.md
src/backend/: main.py
src/backend/benchmark/: backend_request_func.py  benchmark_serving.py
src/backend/server/: request_handler.py  rpc_connection_handler.py  scheduler_manage.py  server_args.py  static_config.py
src/parallax/: cli.py  launch.py  launch_chat.py
src/parallax/metal/paged_attention/: kernel.py
src/parallax/models/: deepseek_v2.py  deepseek_v3.py  glm4_moe.py  gpt_oss.py  llama.py  minimax.py  qwen2.py  qwen3.py  qwen3_moe.py  qwen3_next.py
src/parallax/p2p/: message_util.py  server.py  utils.py
src/parallax/server/: executor.py  http_server.py  kv_cache.py  model.py  node_chat_http_server.py  radix_cache.py  request.py  scheduler.py  server_args.py  server_info.py  shard_loader.py
src/parallax/server/sampling/: sampling_params.py
src/parallax/sglang/: batch_info.py  model_runner.py
src/parallax/sglang/monkey_patch_utils/: glm4_moe_model.py  gpt_oss_model.py  minimax_m2_model.py  model_parallel.py  qwen3_next_config.py  qwen3_next_model.py  triton_backend.py  weight_loader_filter.py
src/parallax/utils/: selective_download.py  shared_state.py  tokenizer_utils.py  utils.py  weight_filter_utils.py
src/parallax/vllm/: batch_info.py  model_runner.py
src/parallax/vllm/monkey_patch_utils/: weight_loader.py
src/parallax_utils/: ascii_anime.py  logging_config.py  utils.py
src/scheduling/: layer_allocation.py  model_info.py  node.py  request_routing.py  scheduler.py
tests/: test_executor.py  test_http_handler.py  test_model.py  test_paged_attention.py  test_prefix_cache.py
tests/scheduler_tests/: test_layer_allocation.py  test_request_routing.py  test_scheduler.py  test_utils.py
