[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "parallax"
version = "0.1.2"
description = "Decentralised pipeline-parallel LLM serving with Sglang + MLX-LM + Lattica"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "Apache-2.0"}
dependencies = [
  # Core dependencies (all platforms)
  "msgpack>=1.1.0,<2.0.0",
  "safetensors>=0.5.1,<0.6.0",
  "huggingface-hub>=0.26.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pyzmq>=25.0.0,<26.0.0",
  "psutil>=5.9.5,<6.0.0",
  "httpx[socks]>=0.27.0,<1.0.0",
  "aiohttp>=3.11.0,<4.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "uvloop>=0.22.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "protobuf==6.31.1",  # Pinned for Lattica compatibility
  "dijkstar==2.6.0",   # Pinned for scheduler graph algorithms
  "lattica==1.0.14",   # Pinned for P2P protocol stability
  "orjson>=3.10.0,<4.0.0",

  "torch>=2.9.0; sys_platform == 'darwin'",
  "mlx-lm==0.28.0",  # Pinned - 0.28.3+ has breaking API changes (removed get_model_path)
  "mlx==0.29.1; sys_platform == 'darwin'",
  "mlx[cpu]==0.29.1; sys_platform != 'darwin'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parallax", "src/scheduling", "src/parallax_utils"]

[project.scripts]
parallax = "parallax.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.8.4",
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.0.0",
  "nox>=2025.11.12",
]


[project.optional-dependencies]
sglang = [
  "sglang[checkpoint-engine,diffusion]==0.5.5; sys_platform != 'darwin'",
]

vllm = [
  "vllm==0.11.0; sys_platform != 'darwin'",
]

# Benchmarking tools
benchmark = [
  "transformers>=4.46.0",
  "tqdm>=4.67.0",
  "datasets>=3.2.0",
  "pillow>=11.0.0",
  "modelscope>=1.21.0",
]
[tool.uv]
conflicts = [
  [
    { extra = "sglang" },
    { extra = "vllm" },
  ],
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/proto/*_pb2.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false




